automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a href="http://www.sedonamonthly.com">
               <img src="images/sedona-logo.png" alt="Sedona Monthly logo" class="logo-border col-1">
             </a>
-            <a href="http://www.bergdorfgoodman.com/">
-              <img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo" class="logo-border col-1">
+            
+              <img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo" class="logo-border col-1"><a href="http://www.bergdorfgoodman.com/">
             </a>
           </div> <!--#press-logos-->
         </section>
