automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
         <section id="press">
           <h2>Press</h2>
           <div id="press-logos">
-            <a href="http://nmai.si.edu">
+            <a href="http://nmai.si.edu" target="_blank" class="hyperlink">
               <img class="logo-border col-1" src="images/nmai-logo.png" alt="NMAI logo">
             </a>
-            <a href="http://www.nytimes.com/pages/t-magazine/">
+            <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank" class="hyperlink">
               <img src="images/times-logo.png " alt="New York Times logo" class="logo-border col-1">
             </a>
-              <img src="images/sedona-logo.png" alt="Sedona Monthly logo" class="logo-border col-1"><a href="http://www.sedonamonthly.com">
+            <a href="http://www.sedonamonthly.com">
+              <img src="images/sedona-logo.png" alt="Sedona Monthly logo" class="logo-border col-1">
             </a>
-              <img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo" class="logo-border col-1"><a href="http://www.bergdorfgoodman.com/">
+            <a href="http://www.bergdorfgoodman.com/">
+              <img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo" class="logo-border col-1">
             </a>
           </div> <!--#press-logos-->
         </section>
