automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank" class="hyperlink">
               <img src="images/times-logo.png " alt="New York Times logo" class="logo-border col-1">
             </a>
-            <a href="http://www.sedonamonthly.com">
+            <a href="http://www.sedonamonthly.com" target="_blank" class="hyperlink">
               <img src="images/sedona-logo.png" alt="Sedona Monthly logo" class="logo-border col-1">
             </a>
-            <a href="http://www.bergdorfgoodman.com/">
+            <a href="http://www.bergdorfgoodman.com/" target="_blank" class="hyperlink">
               <img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo" class="logo-border col-1">
             </a>
           </div> <!--#press-logos-->
